--- a/11-poo/composer.json
+++ b/11-poo/composer.json
@@ -13,5 +13,8 @@
     ],
     "require-dev": {
         "symfony/var-dumper": "^6.3"
+    },
+    "require": {
+        "filp/whoops": "^2.15"
     }
 }
